ออกแบบหน้าจอสมัครสมาชิก

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Book room PBRU</string>
+    <string name="signup">สมัครสมาชิก</string>
+    <string name="name">ชื่อ</string>
+    <string name="surname">นามสกุล</string>
+    <string name="idcard">รหัสบัตรประชาชน</string>
+    <string name="office">บุคลากรภายใน</string>
+    <string name="outoffice">บุคลากรภายนอก</string>
+
+
+
 </resources>
